Add File Bin as a dependency

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "0.5.8",
     "ember-export-application-global": "^1.0.4",
-    "ember-inspector": "1.9.5"
+    "ember-inspector": "1.9.5",
+    "file-bin": "0.2.0"
   },
   "main": "electron.js",
   "ember-electron": {
